updated circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,17 @@
-version: 2
+version: 2.1
+orbs:
+  node: circleci/node@1.1.6
 jobs:
-    build:
-        working_directory: ~/repo
-        steps:
-            - checkout
+  build-and-test:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - node/with-cache:
+          steps:
             - run: npm install
-            - run: npm run test
+            - run: npm test
+workflows:
+    build-and-test:
+      jobs:
+        - build-and-test
