--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,6 @@
 version: 2.1
-orbs:
-  node: circleci/node@1.1.6
 jobs:
-  build-and-test:
+  build:
     executor:
       name: node/default
     steps:
@@ -10,8 +8,37 @@ jobs:
       - node/with-cache:
           steps:
             - run: npm install
-            - run: npm test
+  test:
+    steps:
+      - run: npm test
+  build-docker-image:
+    steps:
+      - run: echo "built docker image"
+  push-docker-image:
+    steps:
+      - run: echo "pushed docker image to registry"
 workflows:
-    build-and-test:
-      jobs:
-        - build-and-test
+    version: 2
+  hw-ci:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+  hw-cd:
+    jobs:
+      - build
+      - test:
+          requires:
+            - build
+      - build-docker-image:
+          triggers:
+            filters:
+              branches:
+                only:
+                  = master
+          requires:
+            - test
+      - push-docker-image:
+          requires:
+            - build-docker-image
