--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ workflows:
             filters:
               branches:
                 only:
-                  = master
+                  - master
           requires:
             - test
       - push-docker-image:
