--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,10 +39,11 @@ workflows:
             - build
       - build-docker-image:
           triggers:
-            filters:
-              branches:
-                only:
-                  - master
+            - schedule:
+              filters:
+                branches:
+                  only:
+                    - master
           requires:
             - test
       - push-docker-image:
