--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ workflows:
       #         only: master
       - build-and-push-docker-image:
           requires:
-            - build
+            - node/test
           filters:
             branches:
               only: master
