add docker step to build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,29 +3,38 @@ orbs:
   node: circleci/node@2.0.1
   # docker: circleci/docker@1.0.1
 jobs:
-  # build:
-  #   - node/with-cache:
-  #     steps:
-  #       - run: npm run build
+  build:
+    - node/with-cache:
+      steps:
+        - run: npm run build
   build-and-push-docker-image:
-    machine: true
+    executor: docker/docker
     steps:
-      - run: echo "built docker image"
-      - run: echo "pushed docker image to registry"
+      - setup_remote_docker
+      - checkout
+      - docker/check
+      - docker/build:
+          image: my_repo/orb-test
+      - docker/push:
+          digest-path: /tmp/digest.txt
+          image: my_repo/orb-test
+      - run:
+          command: |
+            echo "Digest is: $(</tmp/digest.txt)"
 workflows:
   version: 2
   hw-ci-cd:
     jobs:
       - node/test
-      # - build:
-      #     requires:
-      #       - node/test
-      #     filters:
-      #       branches:
-      #         only: master
-      - build-and-push-docker-image:
+      - build:
           requires:
             - node/test
-          filters:
-            branches:
-              only: master
+          # filters:
+          #   branches:
+          #     only: master
+      - build-and-push-docker-image:
+          requires:
+            - build
+          # filters:
+          #   branches:
+          #     only: master
