--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,23 +4,26 @@ orbs:
   # docker: circleci/docker@1.0.1
 jobs:
   build:
-    - node/with-cache:
-      steps:
-        - run: npm run build
-  build-and-push-docker-image:
-    executor: docker/docker
+    executor:
+      name: node/default
     steps:
-      - setup_remote_docker
-      - checkout
-      - docker/check
-      - docker/build:
-          image: my_repo/orb-test
-      - docker/push:
-          digest-path: /tmp/digest.txt
-          image: my_repo/orb-test
-      - run:
-          command: |
-            echo "Digest is: $(</tmp/digest.txt)"
+      - node/with-cache:
+        steps:
+          - run: npm run build
+  # build-and-push-docker-image:
+  #   executor: docker/docker
+  #   steps:
+  #     - setup_remote_docker
+  #     - checkout
+  #     - docker/check
+  #     - docker/build:
+  #         image: my_repo/orb-test
+  #     - docker/push:
+  #         digest-path: /tmp/digest.txt
+  #         image: my_repo/orb-test
+  #     - run:
+  #         command: |
+  #           echo "Digest is: $(</tmp/digest.txt)"
 workflows:
   version: 2
   hw-ci-cd:
@@ -32,9 +35,9 @@ workflows:
           # filters:
           #   branches:
           #     only: master
-      - build-and-push-docker-image:
-          requires:
-            - build
+      # - build-and-push-docker-image:
+      #     requires:
+      #       - build
           # filters:
           #   branches:
           #     only: master
