--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     executor:
       name: node/default
     steps:
+      - checkout
       - run: npm run build
   # build-and-push-docker-image:
   #   executor: docker/docker
