--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 orbs:
   node: circleci/node@2.0.1
-  # docker: circleci/docker@1.0.1
+  docker: circleci/docker@1.0.1
 jobs:
   build-and-push-docker-image:
     executor: docker/docker
