try docker/node

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ orbs:
   docker: circleci/docker@1.0.1
 jobs:
   build-and-push-docker-image:
-    executor: docker/docker
+    executor: docker/node
     steps:
       # - node/test
       - checkout
