--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,14 +13,14 @@ jobs:
               - run: npm install
               - run: npm test
               - run: npm run build
-  build-docker-image-only:
-    executor:
-      name: docker/docker
-    steps:
-      - docker/publish:
-        cache_from: '$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:latest'
-        image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-        tag: latest
+  # build-docker-image-only:
+  #   executor:
+  #     name: docker/docker
+  #   steps:
+  #     - docker/publish:
+  #       cache_from: '$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:latest'
+  #       image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+  #       tag: latest
   # build-and-push-docker-image:
   #   executor: docker/docker
   #   steps:
@@ -44,9 +44,9 @@ workflows:
   hw-ci-cd:
     jobs:
       - install-test-build
-      - build-docker-image-only:
-        requires:
-          - install-test-build
+      # - build-docker-image-only:
+      #   requires:
+      #     - install-test-build
       # - node/test:
       #   filters:
       #     branches:
