--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,14 +11,31 @@ jobs:
         - run: npm install
         - run: npm test
         - run: npm run build
-  # build-docker-image-only:
+        - save_cache:
+          key: built-app-{{checksum}}
+          paths:
+            - build  
+  # install-test-build-cache:
   #   executor:
-  #     name: docker/docker
+  #     name: node/default
   #   steps:
-  #     - docker/publish:
-  #       cache_from: '$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:latest'
-  #       image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
-  #       tag: latest
+  #     - checkout
+  #     - run: npm install
+  #     - run: npm test
+  #     - run: npm run build
+  #     - save_cache:
+  #       key: built-app-{{checksum}}
+  #       paths:
+  #         - build  
+  build-docker-image-only:
+    executor:
+      name: docker/docker
+    steps:
+      - docker/publish:
+        cache_from: '$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME:latest'
+        image: $CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+        tag: latest
+        deploy: false
   # build-and-push-docker-image:
   #   executor: docker/docker
   #   steps:
@@ -42,9 +59,9 @@ workflows:
   hw-ci-cd:
     jobs:
       - install-test-build
-      # - build-docker-image-only:
-      #   requires:
-      #     - install-test-build
+      - build-docker-image-only:
+        requires:
+          - install-test-build
       # - node/test:
       #   filters:
       #     branches:
